# Samsbetv1

./: .gitconfig  Dockerfile  README.md  all_leagues_info.json  api_utils.py  column_config.py  comparacao_times.py  finalizacoes.py  get_league_data.py  main.py  pyproject.toml  readme  requirements.txt  shots_on_target  utils.py
_samsbet_v1_antigo/: all_leagues_info.json  api_utils.py  defesa.py  finalizacoes.py  get_league_data.py  main.py  shots_on_target.py
dashboard/: app.py
dashboard/pages/: 1_📊_Análise_do_Jogo.py
samsbet/services/: stats_service.py
scripts/: test_service.py  warm_cache.py
src/samsbet/: constants.py
src/samsbet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/samsbet/api/: sofascore_client.py
src/samsbet/core/: cache.py  disk_cache.py
src/samsbet/models/: texts.py
src/samsbet/services/: match_service.py  stats_service.py
src/samsbet/ui/: cached_loaders.py
