[project]
name = "samsbet"
version = "2.0.1" # Incrementamos a versão para refletir a mudança

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Diz ao instalador que o nosso código fonte está dentro da pasta 'src'
package_dir = {"" = "src"}
packages = ["samsbet"]