[project]
name = "samsbet"
version = "2.0.2" # Incrementamos a versão para refletir a correção

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# <<< CORREÇÃO E MELHORIA AQUI >>>
# Esta é a forma moderna e robusta de dizer ao setuptools
# para encontrar todos os pacotes dentro da pasta 'src'.
[tool.setuptools.packages.find]
where = ["src"]